--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
     "helmet": "^8.0.0",
     "http-status": "^2.0.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.5",
     "sequelize": "^6.37.5",
     "validator": "^13.12.0",
     "xss-shield": "^1.0.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.2",
     "@types/sequelize": "^4.28.20",
     "eslint": "^9.17.0",
