--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-express-ts-sequelize-boilerplate",
+  "name": "news-crawler-backend",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
